# Beep.AI.Code

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Beep.AI.Code.sln  CleanCodeRules.txt  CsharpAnalysis.txt  LanguageSupport.txt  MASTER-TODO-TRACKER.md  OtherLanguageAnalysis.txt  PLAN.md  README.md  SINGLETON_REFACTORING.md  Update_suggestions.txt  all_funcs.json  beep.spec  libraries_Suggestion.txt  pyproject.toml  unused_funcs.json
.beep/: agent_state.sqlite-shm  agent_state.sqlite-wal
.github/: copilot-instructions.md
.plans/: PHASE_10_TESTS.md  PHASE_11_LANGGRAPH.md  PHASE_12_PROVIDER_AND_LSP_PLUGINS.md  PHASE_13_PRODUCT_PARITY.md  PHASE_14_PACKAGING_AND_UPDATES.md  PHASE_15_CODING_AGENT_PARITY.md  PHASE_16_PROVIDER_PACKS_AND_CAPABILITY_PARITY.md  PHASE_17_PORTABLE_AGENT_BUNDLES_AND_RUNNER_TARGETS.md  PHASE_18_PUBLISHING_CHANNELS_AND_DEPLOYMENT_TARGETS.md  PHASE_1_TOOLS.md  PHASE_2_AGENT_LOOP.md  PHASE_3_API_CLIENT.md  PHASE_4_CONTEXT.md  PHASE_5_CHAT_REPL.md  PHASE_6_MEMORY_RULES.md  PHASE_7_SESSIONS.md  PHASE_8_WORKSPACE.md  PHASE_9_PLUGINS_MCP.md  README.md  semble.txt
.pytest-tmp/: test_agent_command_uses_resolvcurrent  test_build_rules_context_rendecurrent  test_chat_session_bootstrap_uscurrent  test_chat_session_includes_procurrent  test_chat_session_metadata_usecurrent  test_chat_session_rules_contexcurrent  test_chat_session_skill_contexcurrent  test_chat_session_uses_plugin_current  test_clipboard_command_forwardcurrent  test_custom_template_overridescurrent  test_generate_from_custom_tempcurrent  test_handle_coding_approvals_dcurrent  test_image_command_forwards_cocurrent  test_import_command_persists_icurrent  test_import_command_rejects_securrent  test_list_templates_includes_wcurrent  test_load_rules_in_ordercurrent  test_load_skills_from_workspaccurrent  test_mcp_init_cli_generates_securrent  test_mcp_presets_cli_lists_vercurrent  test_perplexity_preset_exposescurrent  test_plugin_runtime_includes_wcurrent  test_plugins_add_path_cli_updacurrent  test_python_definition_tool_focurrent  test_python_hover_tool_formatscurrent  test_python_jedi_adapter_reporcurrent  test_python_references_tool_focurrent  test_python_rename_tool_appliecurrent  test_python_workspace_plugin_ecurrent  test_python_workspace_symbols_current  test_resolve_mcp_configurationcurrent  test_resolve_rules_for_path_macurrent  (+9 more)
Formula/: beep.rb
tests/fixtures/agent_packages/python/: README.md  __init__.py  pyproject.toml  release-metadata.json
(+622 files in other folders)
