[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beep-ai-code"
version = "0.1.0"
description = "CLI code assistant powered by Beep.AI.Server"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Beep.AI Team"},
]
keywords = ["cli", "code-assistant", "ai", "beep-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "keyring>=24.0.0",
    "pygments>=2.17.0",
    "pathspec>=0.12.0",
    "textual>=0.80.0",
    "prompt-toolkit>=3.0.0",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]
schema = [
    "jsonschema>=4.20.0",
]
websearch = [
    "beautifulsoup4>=4.12.0",
]
semble = [
    "semble>=0.1.1",
]
all = [
    "beep-ai-code[schema,websearch,semble]",
]

[project.scripts]
beep = "beep.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["beep"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
