[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beep-agent-code-reviewer"
version = "1.0.0"
description = "Review code changes."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Beep.AI Team"}]
dependencies = [
    "beep-ai-code>=__CLI_VERSION__",
]

[tool.hatch.build]
include = [
    "README.md",
    "release-metadata.json",
    "src/beep_agent_code_reviewer/**/*.py",
    "src/beep_agent_code_reviewer/resources/*.json",
]

[tool.hatch.build.targets.wheel]
packages = ["src/beep_agent_code_reviewer"]
